tests/ui-rustc-1-95/g-roleprogram-witness-mismatch.stderr
error: cannot construct `RoleProgram<0>` with struct literal syntax due to private fields
 --> tests/ui-rustc-1-95/g-roleprogram-witness-mismatch.rs:5:27
  |
5 |     core::hint::black_box(RoleProgram::<0> {});
  |                           ^^^^^^^^^^^^^^^^
  |
  = note: private fields `_private` and `image` that were not provided
